Attempt to fix font on mobile devices...again

--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,14 @@
     float: center;
 }
 
+@font-face {
+    font-family: 'Mistral';
+    src: url('./fonts/MISTRAL.TTF');
+}
+
 h1 {
     text-align:center;
-    font-family: "mistral";
+    font-family: "Mistral";
     font-size:5em;
     font-weight: bold;
 }
@@ -32,14 +37,14 @@ h2 {
 }
 
 h3 {
-    font-family: "mistral";
+    font-family: "Mistral";
     text-align: center;
     font-size: 3em;
     font-weight: bold;
 }
 
 h4 {
-    font-family: "mistral";
+    font-family: "Mistral";
     text-align: center;
     font-size:;
     font-weight: bold;
